Allen/k8slearn/istio/labs/07-tracing/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        imagePullPolicy: Always
        image: cncamp/service1:v1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - name: http-service1
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service1
