Allen/k8slearn/istio/labs/07-tracing/service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        imagePullPolicy: Always
        image: cncamp/service2:v1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - name: http-service2
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service2
