Allen/k8slearn/istio/labs/07-tracing/istio-specs.yaml
# Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-service0
      number: 80
      protocol: HTTP
---
# VirtualService
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
spec:
  gateways:
  - service0
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /service0
    route:
    - destination:
        host: service0
        port:
          number: 80
